Fix display issues on mobile devices with character list

--- a/priv/static/css/site.css
+++ b/priv/static/css/site.css
@@ -130,5 +130,4 @@ h4 {
 
 .character-list-group-item .character-thumbnail {
   height: 100px;
-  float: right;
 }
